sections and grid modified

--- a/index.html
+++ b/index.html
@@ -32,26 +32,28 @@
         </nav>
     </header>
     <main>
-        <div>
+        <section class="card">
             <h2>Course Work</h2>
             <ul>
                 <li></li>
                 <li></li>
                 <li></li>
             </ul>
-        </div>
-        <div>
+        </section>
+
+        <section class="card">
             <h2>Monterrey, Mexico</h2>
             <img src="images/monterrey-city.webp" alt="Monterrey, Mexico view from the skyline">
-        </div>
-        <div>
+        </section>
+
+        <section class="card">
             <h2>Web and Computer Programming Certificate</h2>
-            <div>
+            <div id="cardSection1">
                 <h5>All</h5>
                 <h5>CSE</h5>
                 <h5>WDD</h5>
             </div>
-            <div>
+            <div id="cardSection2">
                 <h4>CSE 110</h4>
                 <h4>WDD 130</h4>
                 <h4>CSE 111</h4>
@@ -59,7 +61,7 @@
                 <h4>WDD 131</h4>
                 <h4>WDD 231</h4>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         <p>&copy; <span id="currentyear"></span> Pedro Moo - Monterrey, Mexico</p>
