Colors, ul and img changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
         <section class="card">
             <h2>Monterrey, Mexico</h2>
-            <img src="images/monterrey-city.webp" alt="Monterrey, Mexico view from the skyline">
+            <img id="mtyImg" src="images/monterrey-city.webp" alt="Monterrey, Mexico view from the skyline">
+            <p>Monterrey, Mexico</p>
         </section>
 
         <section class="card">
