--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav>
             <a id="menu" href="#"></a>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Chamber</a></li>
-                <li><a href="#">Github Profile</a></li>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="https://github.com/moo23001">Chamber</a></li>
+                <li><a href="https://github.com/moo23001">Github Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/pedro-moo/">LinkedIn</a></li>                
             </ul>
         </nav>
