--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <script defer src="scripts/getdates.js"></script>
     <script defer src="scripts/menu.js"></script>
+    <script defer src="scripts/courses.js"></script>
+    
 </head>
 <body>
     <header>
@@ -55,12 +57,7 @@
                 <h5>WDD</h5>
             </div>
             <div id="cardSection2">
-                <h4>CSE 110</h4>
-                <h4>WDD 130</h4>
-                <h4>CSE 111</h4>
-                <h4>CSE 210</h4>
-                <h4>WDD 131</h4>
-                <h4>WDD 231</h4>
+
             </div>
         </section>
     </main>
