--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <section class="card">
             <h2>Web and Computer Programming Certificate</h2>
             <div id="cardSection1">
-                <h5>All</h5>
-                <h5>CSE</h5>
-                <h5>WDD</h5>
+                <h5 id="allCourses"><a href="#">All</a></h5>
+                <h5 id="cseCourses"><a href="#">CSE</a></h5>
+                <h5 id="wddCourses"><a href="#">WDD</a></h5>
             </div>
             <div id="cardSection2">
 
