credits added using reduce

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
 
         <section class="card">
             <h2>Web and Computer Programming Certificate</h2>
+            <h3 id="credits"></h3>
             <div id="cardSection1">
+
+
                 <h5 id="allCourses"><a href="#">All</a></h5>
                 <h5 id="cseCourses"><a href="#">CSE</a></h5>
                 <h5 id="wddCourses"><a href="#">WDD</a></h5>
             </div>
             <div id="cardSection2">
+                
 
             </div>
         </section>
