corrected warning in HTML empty heading

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section class="card">
             <h2>Web and Computer Programming Certificate</h2>
-            <h3 id="credits"></h3>
+            <div id="credits"></div>
             <div id="cardSection1">
 
 
