Og properties and favicon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>WDD 231 - Web Front End Development I- Pedro Moo</title>
     <meta name="description" content="WDD 231 Web Frontend Development I home page for Pedro Moo's work">
     <meta name="author" content="Pedro Moo">
+    <meta property="og:title" content="Pedro Moo's WDD 231 class work">
+    <meta property="og:url" content="https://moo23001.github.io/wdd231">
+    <meta property="og:image" content="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/G2KOYSOT3RH2XMXKVRBEORMQEY.jpg">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
