Json and new home image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <section class="card">
             <h2>Monterrey, Mexico</h2>
-            <img id="mtyImg" src="images/monterrey-city.webp" alt="Monterrey, Mexico view from the skyline">
+            <img id="mtyImg" src="images/monterrey-city300x169.webp" alt="Monterrey, Mexico view from the skyline">
             <p>Monterrey, Mexico</p>
         </section>
 
