Menu activity and prophets activity

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img id="pmimage" src="images/pmimage.webp" alt="Pedro Moo's picture">
             <h1>Pedro Moo</h1>
         </div>
-        <nav>
+        <nav id="animateme">
             <a id="menu" href="#"></a>
             <ul class="navigation">
                 <li><a href="#" class="active">Home</a></li>
