--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,9 +18,33 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
         <script defer src="scripts/getdates.js"></script>
         <script defer src="scripts/menu.js"></script>
+        <script defer src="scripts/directory.js"></script>
         
     </head>
 <body>
-    
+    <header>
+        <div class="mainHeader">
+            <img id="logo" src="images/logo.webp" alt="Monterrey Chamber of Commerce Logo">
+            <h1>Monterrey Chamber of Commerce</h1>
+        </div>
+        <nav id="animateme">
+            <a id="menu" href="#"></a>
+            <ul class="navigation">
+                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Discover</a></li>                
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <button id="grid">⏹️Grid</button>
+        <button id="list">📄List</button>
+        <article class="cards grid"></article>
+    </main>
+    <footer>
+        <p>&copy; <span id="currentyear"></span> Pedro Moo - Monterrey, Mexico</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
