--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -30,10 +30,10 @@
         <nav id="animateme">
             <a id="menu" href="#"></a>
             <ul class="navigation">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#" class="active">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Discover</a></li>                
+                <li><a href="join.html">Join</a></li>
+                <li><a href="discover.html">Discover</a></li>                
             </ul>
         </nav>
     </header>
