Connected Weather API

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,6 +19,7 @@
         <script defer src="scripts/getdates.js"></script>
         <script defer src="scripts/menu.js"></script>
         <script defer src="scripts/spotlight.js"></script>
+        <script defer src="scripts/weather.js"></script>
         
     </head>
     <body>
@@ -39,7 +40,7 @@
         </header>
         <main>
             <div id="hero">
-                <img src="images/monterrey-hero1960x500.webp" alt="Monterrey commercial skyline view">
+                <img src="images/monterrey-hero1960x500.webp" alt="Monterrey commercial skyline view" loading="lazy">
                 <a href="join.html" class="callToAction">Join Now</a>
             </div>
             <div id="home">
