Forecast added in weather.js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="mainHeader">
-            <img id="logo" src="images/logo.webp" alt="Monterrey Chamber of Commerce Logo">
+            <img id="logo" src="images/chamberlogo.webp" alt="Monterrey Chamber of Commerce Logo">
             <h1>Monterrey Chamber of Commerce</h1>
         </div>
         <nav id="animateme">
