JS for Modals and CSS for cursor pointer, hover

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
             <h2>Web and Computer Programming Certificate</h2>
             <div id="credits"></div>
             <div id="cardSection1">
-
-
                 <h5 id="allCourses"><a href="#">All</a></h5>
                 <h5 id="cseCourses"><a href="#">CSE</a></h5>
                 <h5 id="wddCourses"><a href="#">WDD</a></h5>
+
             </div>
             <div id="cardSection2">
-                
+                <dialog id="course-details"></dialog>
 
             </div>
         </section>
