--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
                 <h5 id="wddCourses"><a href="#">WDD</a></h5>
 
             </div>
+            
             <div id="cardSection2">
-                <dialog id="course-details"></dialog>
+                
 
             </div>
+            <dialog class="course-details"></dialog>
         </section>
     </main>
     <footer>
