Added animation to header and picture

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a id="menu" href="#"></a>
             <ul class="navigation">
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="https://github.com/moo23001">Chamber</a></li>
+                <li><a href="chamber/index.html">Chamber</a></li>
                 <li><a href="https://github.com/moo23001">Github Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/pedro-moo/">LinkedIn</a></li>                
             </ul>
