--- a/chamber/join.html
+++ b/chamber/join.html
@@ -41,7 +41,7 @@
             <form method="get" action="thankyou.html" class="form" target="_self">
                 <h1>Form</h1>
                 <fieldset class="rep">
-                    <legend>Business/Org Representative</legend>
+                    <legend>Applicant's Info</legend>
                     <label>First Name <input type="text" name="first" required autocomplete="name"></label>
                     <label>Last Name <input type="text" name="last" required autocomplete="name"></label>
                     <label>Organization Title <input type="text" name="org" required autocomplete="organization-title"></label>
@@ -49,7 +49,7 @@
                     <label>Phone <input type="tel" name="phone" required autocomplete="tel-area-code"></label>
                 </fieldset>
                 <fieldset>
-                    <legend>Business/Org Information</legend>
+                    <legend>Business/Org Info</legend>
                     <label>Business/Organization's name <input type="text" name="business" required autocomplete="organization"></label>
                     <label>Business/Org description <input type="textarea" name="description"></label>
                 </fieldset>
