Thank you page and confirmation

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -63,7 +63,7 @@
                     </div>
                     
                 </fieldset>
-                <input type="hidden" name="timestamp" id="timeStamp">
+                <input type="hidden" name="timeStamp" id="timeStamp">
                 <button type="submit" id="joinNow">Join Now</button>
             </form>
             <div id="membershipCards">
@@ -76,4 +76,6 @@
             <p id="lastModified"></p>
         </footer>
     </body>
+    <script src="scripts/join.js"></script>
+
 </html>
