--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -18,6 +18,8 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
         <script defer src="scripts/getdates.js"></script>
         <script defer src="scripts/menu.js"></script>
+        <script defer src="scripts/thankyou.js"></script>
+
         
     </head>
     <body>
