performance changes to improve accessibility

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -50,8 +50,8 @@
                 </fieldset>
                 <fieldset>
                     <legend>Business/Org Info</legend>
-                    <label>Business/Organization's name <input type="text" name="business" required autocomplete="organization"></label>
-                    <label>Business/Org description <input type="textarea" name="description"></label>
+                    <label>Business/Org's name <input type="text" name="business" required autocomplete="organization"></label>
+                    <label>Business/Org description <textarea name="description" id="description"></textarea></label>
                 </fieldset>
                 <fieldset>
                     <legend>Select Membership Level</legend>
