audit Corrections to CSS and HTM:

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -46,7 +46,7 @@
                     <label>Last Name <input type="text" name="last" required autocomplete="name"></label>
                     <label>Organization Title <input type="text" name="org" required autocomplete="organization-title" pattern="[A-Za-z]+$"></label>
                     <label>Email <input type="email" name="email" required autocomplete="email" placeholder="myname@email.com"></label>
-                    <label>Phone <input type="tel" name="phone" required autocomplete="tel-area-code"></label>
+                    <label>Phone <input type="tel" name="phone" required autocomplete="tel"></label>
                 </fieldset>
                 <fieldset>
                     <legend>Business/Org Info</legend>
@@ -76,6 +76,5 @@
             <p id="lastModified"></p>
         </footer>
     </body>
-    <script src="scripts/join.js"></script>
 
 </html>
