pictures added to discover

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,7 +45,16 @@
             <div class="pictureColumn">
                     <img src="images/rsz_macroplaza.webp" alt="Macroplaza Monterrey Mexico" width="400" height="200">
                     <caption>Macroplaza</caption>
-
+                    <img src="images/fundidora.webp" alt="fundidora Park Monterey Mexico" width="400" height="200">
+                    <caption>Fundidora Park</caption>
+                    <img src="images/paseo-san-pedro-centro.webp" alt="Paseo San Pedro Mall" width="400" height="200">
+                    <caption>Paseo San Pedro</caption>
+                    <img src="images/Museo-de-Arte-Contemporaneo-Marco.webp" alt="MARCP Museum Monterrey Mexico" width="400" height="200">
+                    <caption>MARCO Museum</caption>
+                    <img src="images/cintermex.webp" alt="Cintermex Business Center Monterrey Mexico" width="400" height="200">
+                    <caption>Cintermex</caption>
+                    <img src="images/parque-ecologico-chipinque.webp" alt="Chipinque Park Mexico" width="400" height="200">
+                    <caption>Chipinque</caption>
             </div>
         </main>
         <footer>
