Scripts for alerts and css for fact sheet

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -31,7 +31,7 @@
             <nav id="animateme">
                 <a id="menu" href="#"></a>
                 <ul class="navigation">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a class="active" href="discover.html">Discover</a></li>                
@@ -40,20 +40,22 @@
         </header>
         <main class="mainDiscover">
             <div class="infoColumn">
+                <h1>Fact sheet</h1>
 
             </div>
             <div class="pictureColumn">
-                    <img src="images/rsz_macroplaza.webp" alt="Macroplaza Monterrey Mexico" width="400" height="200">
+                    <h1>Places to visit</h1>
+                    <img src="images/rsz_macroplaza.webp" alt="Macroplaza Monterrey Mexico" width="400" height="200" loading="lazy">
                     <caption>Macroplaza</caption>
-                    <img src="images/fundidora.webp" alt="fundidora Park Monterey Mexico" width="400" height="200">
+                    <img src="images/fundidora.webp" alt="fundidora Park Monterey Mexico" width="400" height="200" loading="lazy">
                     <caption>Fundidora Park</caption>
                     <img src="images/paseo-san-pedro-centro.webp" alt="Paseo San Pedro Mall" width="400" height="200">
                     <caption>Paseo San Pedro</caption>
-                    <img src="images/Museo-de-Arte-Contemporaneo-Marco.webp" alt="MARCP Museum Monterrey Mexico" width="400" height="200">
+                    <img src="images/Museo-de-Arte-Contemporaneo-Marco.webp" alt="MARCP Museum Monterrey Mexico" width="400" height="200" loading="lazy">
                     <caption>MARCO Museum</caption>
-                    <img src="images/cintermex.webp" alt="Cintermex Business Center Monterrey Mexico" width="400" height="200">
+                    <img src="images/cintermex.webp" alt="Cintermex Business Center Monterrey Mexico" width="400" height="200" loading="lazy">
                     <caption>Cintermex</caption>
-                    <img src="images/parque-ecologico-chipinque.webp" alt="Chipinque Park Mexico" width="400" height="200">
+                    <img src="images/parque-ecologico-chipinque.webp" alt="Chipinque Park Mexico" width="400" height="200" loading="lazy">
                     <caption>Chipinque</caption>
             </div>
         </main>
