added images with source media

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -66,7 +66,11 @@
                         <div class="overlay">MARCO Museum</div>
                     </div>
                     <div class="picContainer">
-                        <img class="discoverImg" src="images/cintermex.webp" alt="Cintermex Business Center Monterrey Mexico" width="400" height="200" loading="lazy">
+                        <picture>
+                            <source media="(min-with:640px)" srcset="images/cintermex.webp ">
+                            <img class="discoverImg" src="images/cintermex400x200.webp" alt="Cintermex Business Center Monterrey Mexico" width="400" height="200" loading="lazy">
+                        </picture>
+
                         <div class="overlay">Cintermex Business Center</div>
                     </div>
                     <div class="picContainer">
