--- a/finalproject/gallery.html
+++ b/finalproject/gallery.html
@@ -34,6 +34,7 @@
             <div class="galleryContainer">
 
             </div>
+            <dialog class="cart"></dialog>
             
     </main>
     <footer>
