Gallery and contact us modified

--- a/finalproject/contactus.html
+++ b/finalproject/contactus.html
@@ -34,9 +34,9 @@
         <form method="get" action="thankyou.html" class="wf1">
             <fieldset>
                 <legend>Contact Us</legend>
-                <label>Name* <input type="text" name="fullName" id="fullName"></label>
-                <label>Email* <input type="email" name="email" id="email"></label>
-                <label>My Request* </label><textarea name="request" id="request" rows="5"></textarea>
+                <label>Name* <input type="text" name="fullName" id="fullName" placeholder="Name & Last Name"></label>
+                <label>Email* <input type="email" name="email" id="email" placeholder="youremail@mail.com"></label>
+                <label>My Request* </label><textarea name="request" id="request" rows="5" placeholder="Tell us what we can do for you"></textarea>
                 <input type="submit" value="Send my request" id="sendRequest">
             </fieldset>
 
