--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -30,7 +30,7 @@
     </header>
     <main> 
         <div class="homeContainer">
-            <img id="hero" src="images/hero1280x640.webp" alt="hero image" loading="lazy">
+            <img id="hero" src="images/hero1280x640.webp" alt="hero image" loading="lazy" width="720" height="480">
             <div class="orderTodayBox">
                 <a href="contactus.html" id="orderToday">Place your order today</a>
             </div>
@@ -38,15 +38,15 @@
             <section id="leftSection">
                 <h2>Make a Gift</h2>
                 <p>Order a Mistery box as a gift for your loved ones and enjoy as you discover together the surprise Ana thougth for you. Use the code: "MisteryGift" in your request</p>
-                    <img src="images/p6_1280x720.webp" alt="A mistery gift box with a ribbon and a to and from card from Ana Thinking">
-                    <a href="contactus.html"  class="orderButton" loading="lazy">Order Now</a>
+                    <img src="images/p6_1280x720.webp" alt="A mistery gift box with a ribbon and a to and from card from Ana Thinking" width="400" height="300"  loading="lazy">
+                    <a href="gallery.html"  class="orderButton">Order Now</a>
             </section>
             <section id="rightSection">
                 <h2>Order this deal</h2>
                 <p>Order now and you can buy one and the second one 50% off. Double the gift, Double the fun. Use code: "50off" in your request</p>
-                <img src="images/p10_1280x720.webp" alt="Two mistery gift boxes with a riboon and a to and from card from Ana Thinking">
+                <img src="images/p10_1280x720.webp" alt="Two mistery gift boxes with a riboon and a to and from card from Ana Thinking" width="400" height="300" loading="lazy">
 
-                    <a href="contactus.html"  class="orderButton" loading="lazy">Order Now</a>
+                    <a href="gallery.html"  class="orderButton">Order Now</a>
             </section>
         </div>
             
