Order placement in gallery corrected added order confirmation draft

--- a/finalproject/orderconfirmation.html
+++ b/finalproject/orderconfirmation.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <meta name="description" content="WDD 131 Final project gallery page">
+    <title>Contact Us</title>
+    <meta name="description" content="WDD 131 Final project contact us page">
     <meta name="author" content="Pedro Moo">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/largebase.css">
@@ -15,26 +15,28 @@
 
     <script defer src="scripts/getdates.js"></script>
     <script defer src="scripts/menu.js"></script>
-    <script defer src="scripts/gallery.js"></script>
+
 
 </head>
 <body>
-       <header>
-            <h1>Ana Thinking</h1>
-            <a id="menu" href="#"></a>
-            <nav>
-                <ul class="navigation">
-                    <li id="home"><a href="index.html">Home</a></li>
-                    <li id="gallery"><a href="gallery.html">Gallery</a></li>
-                    <li id="contactUs"><a href="contactus.html">Contact Us</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <h1>Ana Thinking</h1>
+        <a id="menu" href="#"></a>
+        <nav>
+            <ul class="navigation">
+                <li id="home"><a href="index.html">Home</a></li>
+                <li id="gallery"><a href="gallery.html">Gallery</a></li>
+                <li id="contactUs"><a href="contactus.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-            <div class="galleryContainer">
-                
-            </div>
-            <dialog class="cart"></dialog>            
+        <div class="thankyou">
+            <h1>Thank you</h1>
+            <h2>for sending your request.</h2>
+            <p>his is your order</p>
+        </div>        
+            
     </main>
     <footer>
         <p>&copy; <span id="currentyear"></span> Pedro Moo - Monterrey, Mexico</p>
