--- a/finalproject/orderconfirmation.html
+++ b/finalproject/orderconfirmation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Order Confirmed</title>
     <meta name="description" content="WDD 131 Final project contact us page">
     <meta name="author" content="Pedro Moo">
     <link rel="stylesheet" href="styles/base.css">
@@ -15,6 +15,7 @@
 
     <script defer src="scripts/getdates.js"></script>
     <script defer src="scripts/menu.js"></script>
+    <script defer src="scripts/order.js"></script>
 
 
 </head>
@@ -34,7 +35,7 @@
         <div class="thankyou">
             <h1>Thank you</h1>
             <h2>for sending your request.</h2>
-            <p>his is your order</p>
+
         </div>        
             
     </main>
